--- a/index.html
+++ b/index.html
@@ -4,25 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Clone - Partage de Vidéos</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 20px; }
-        h1 { color: #FF0000; }
-        .video-container { margin-bottom: 20px; }
-        video { max-width: 100%; }
-    </style>
+    <title>YouTube Clone</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>YouTube Clone</h1>
-    <p>Bienvenue sur notre clone YouTube pour le partage de vidéos !</p>
-    <div class="video-container">
-        <h2>Vidéo en vedette</h2>
-        <video controls>
-            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-            Votre navigateur ne supporte pas la balise vidéo.
-        </video>
-    </div>
-    <p>Note : Ceci est une démonstration statique. Dans une version complète, vous pourriez télécharger et voir plusieurs vidéos.</p>
+    <header>
+        <div class="logo">
+            <i class="fab fa-youtube"></i>
+            <span>YouTube Clone</span>
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Rechercher">
+            <button><i class="fas fa-search"></i></button>
+        </div>
+        <div class="user-actions">
+            <i class="fas fa-video"></i>
+            <i class="fas fa-th"></i>
+            <i class="fas fa-bell"></i>
+            <i class="fas fa-user-circle"></i>
+        </div>
+    </header>
+    <main>
+        <div class="videos-grid">
+            <!-- Les vidéos seront insérées ici par JavaScript -->
+        </div>
+    </main>
+    <script src="js/app.js"></script>
 </body>
 </html>
     
